# garage

./: .envrc  README.md  pyproject.toml
backend/: pyproject.toml
backend/src/: web.py
frontend/garage-website/: package-lock.json  package.json
frontend/garage-website/src/: App.js  DoorSensor.js  RelayButton.js
garage/: web.py
garage/templates/: main.html
